<resources>
    <string name="app_name">FeedTheBeast</string>

    <string name="feed">Feed</string>
    <string name="share">Share</string>
    <string name="share_success_text">I play #FeedTheBeast with score %1$d. My kitten is happy!</string>

    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Group: 951006\n\nStudent: Sementsova Kristina\n\nLab1: Feed The Beast</string>
    <string name="rules_text">Just look into his eyes =(\n\nHurry up!!!\nFeed and play with him to make him happy and love you</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed_to_beast">FEED TO BEAST</string>
    <string name="beast">cat</string>
    <string name="about_programmer_title">ABOUT PROGRAMMER</string>
    <string name="rules_set_title">RULES</string>
    <string name="about_cat">This is a small kitten who is very hungry, sad and bored.</string>
    <string name="how_to_feed_text">To feed the cat press the butoon:</string>
    <string name="about_score_text">You can see how many times you fed the cat:</string>
    <string name="appwidget_text">Start\nGame</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="saved_high_score_key">SAVED_KEY</string>
    <string name="preference_file_key">PREF_FILE_KEY</string>
    <string name="results">Results</string>
    <string name="achievements">Achievements</string>
    <string name="users">USERS</string>
    <string name="registration">REGISTRATION</string>
    <string name="user_name">User name:</string>
    <string name="register">REGISTER</string>
    <string name="input_your_name">input your name</string>

</resources>