<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="Game">
        <menu>
            <item
                android:id="@id/resultsFragment"
                android:title="@string/results"
                android:icon="@drawable/ic_result_black"
                />
            <item
                android:id="@+id/achievementsFragment"
                android:title="@string/achievements"
                android:icon="@drawable/ic_achievement_black"
                />
        </menu>
    </item>
    <item
        android:id="@+id/rulesFragment"
        android:icon="@drawable/rules"
        android:title="@string/rules" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/android"
        android:title="@string/about" />
</menu>